k8s/ingress-routes/jenkins-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins
  namespace: jenkins
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jenkins.local`)
      kind: Rule
      services:
        - name: jenkins
          port: 8080
